Add: Onclick Text Color Change

--- a/Exercise_2/index.html
+++ b/Exercise_2/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Button Click</title>
 </head>
 <body>
-    
+    <h1 id="h1" onclick="changeColor()">Click me to change color</h1>
+    <h1>A function is triggered when the h1 element is clicked.  The 
+        function sets the color of the h1 element to blue.</h1>
+    </h1>
+
+    <script src="script.js"></script>
 </body>
 </html>
